TAG: qcreports_db-4-4-0-8
TAG: qcreports_db-4-4-0-7
DATE: 09/30/2010
STAFF: dbm
CHANGES: TR8688 (except for #1)
1) converted goStats.sh to mgd/GO_stats.py (Lori)
2) renamed strainChanges.sh to strainChanges.csh
3) renamed qcnightly_reports.sh to qcnightly_reports.csh and fixed logging
4) renamed qcweekly_reports.sh to qcweekly_reports.csh and fixed logging
5) renamed qcmonthly_reports.sh to qcmonthly_reports.csh and fixed logging
6) mgd/PRB_Strain.py: exclude null symbols when retrieving markers because
                      it was causing an exception
7) mgd/PRB_StrainJAX3.py: fixed bug - using undefined file pointer
8) Configuration.default: fixed spacing and comments

TAG: qcreports_db-4-4-0-6
TAG: qcreports_db-4-4-0-5
DATE: 09/16/2010
STAFF: lec
CHANGES:
1) TR10356/MGI_ObsoleteGeneModel.sql
2) qcr.html;added gorefgenload

TAG: qcreports_db-4-4-0-4
TAG: qcreports_db-4-4-0-3
DATE: 09/08/2010
STAFF: lec
CHANGES:
1) TR10353/GXD_ImageCheck.py
2) TR10344/GXD_ImageJPG.sql
3) TR10344/GXD_SpecTheilerAge.py

TAG: qcreports_db-4-4-0-2
DATE: 09/07/2010
STAFF: lec
CHANGES:
1) qcr.html - mcv changes

TAG: qcreports_db-4-4-0-1
DATE: 08/18/2010
STAFF: lec
CHANGES:
1) TR6839/merge tr6829 to trunk

TAG: qcreports_db-4-3-4-14
DATE: 08/18/2010
STAFF: lec
CHANGES: TR10318/goStats.sh

TAG: qcreports_db-4-3-4-13
DATE: 07/29/2010
STAFF: lec
CHANGES: TR10281
1) BIB_RefsToIndex.py
2) BIB_NoRef.sql
add pubmed ids

TAG: qcreports_db-4-3-4-12
DATE: 07/29/2010
STAFF: lec
CHANGES: TR10158
1) item 5: ALL_NoMCL.sql
2) item 7: ALL_MCLAllele.sql

TAG: qcreports_db-4-3-4-11
DATE: 07/28/2010
STAFF: lec
CHANGES: TR10136
1) fix qcweekly_reports.sh

TAG: qcreports_db-4-3-4-10
DATE: 07/27/2010
STAFF: lec
CHANGES: TR10136
1) fix weekly/PRB_StrainJAX2.py

TAG: qcreports_db-4-3-4-9
TAG: qcreports_db-4-3-4-8
DATE: 07/22/2010
STAFF: lec
CHANGES: TR10136
1) fix mgd/PRB_StrainJAX3.py
2) fix weekly/PRB_StrainJAX2.py
3) fix weekly/PRB_StrainJAX7.sql
4) fix weekly/PRB_StrainJAX8.sql