@@ -87,6 +87,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_TransgeneDiff.sql.rpt">Approved Transgenes with Name/Symbol Differences</A
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_NoMCL.sql.rpt">Alleles of type Targeted or Gene Trap that have no MCL association</A
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_MCLAllele.sql.rpt">MCL's that are associated with more than one Allele</A
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_Notes.rpt">Allele Notes with HTML errors</A
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
 </OL>
 
