@@ -1,3 +1,10 @@
+TAG: qcreports_db-4-4-0-9
+DATE: 10/05/2010
+STAFF: lec
+CHANGES:
+1) TR10296/ALL_Notes.py
+2) TR10398/MLP_Nomenclature.sql
+
 TAG: qcreports_db-4-4-0-8
 TAG: qcreports_db-4-4-0-7
 DATE: 09/30/2010
